--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </ul>
     </main>
     <footer>
-        <p>Todos los derechos resevados 2025</p>
+        <p>Todos los derechos resevados 2030 ya con todo</p>
     </footer>
     
 </body>
