--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
+    <header class="header">
+        <img class="header--img" src="./img/logotipo.png" alt="logo de Erika-una flor">
+        <a href="">HOME</a>
+        <nav class="header--nav">
+            <ul class="header--nav-list">
+                <li >
                     <a href="./contact.html">Contactos</a>
                 </li>
                 <li>
@@ -32,15 +34,48 @@
             </ul>
         </nav>  
     </header>
-    <main>
-        <img src="https:/picsum.photos/200" alt="mi foto de perfil">
-        <h2>Erika Patricia Aviles Cortez</h2>
-        <p>Esta va hacer mi descripción</p>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
+    <main class="main">
+        <div class="main--container_div">
+            <div class="main--div-img">
+                <img class="main--img" src="https:/picsum.photos/200" alt="mi foto de perfil">
+            </div>
+            <div class="main--div-info">
+                <h2 class="main--info-name">Erika Patricia Aviles Cortez - Frontend Dev</h2>
+                <p class="main--description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quibusdam voluptatem dolores hic saepe veniam, beatae, illum iure dicta vel doloremque, culpa veritatis aperiam eos similique deserunt repellat magnam aspernatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga enim ut quaerat reiciendis autem? Illo itaque veniam voluptatem! Quae aspernatur veniam ducimus deleniti culpa nihil perferendis odit unde. Enim, nostrum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, sapiente. Numquam eius ea explicabo provident repellendus perferendis omnis pariatur adipisci laborum voluptate quas quia dicta sapiente, doloribus at quod repudiandae.</p>
+                <div class="main--links">
+                    <a class="main--link main--links__color" href="">Contactos</a>
+                    <a class="main--link main--links__transparent" href="">Acerca de mi</a>
+                </div>
+                <div class="main--social-media">
+                    <h2>Sigueme en: </h2>
+                    <ul>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href="">Linkedin</a>
+                        <a href="">InsTagram</a>
+                    </ul>  
+                </div> 
+            </div>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <img src="" alt="Reac">
+                    <p>Reac</p>
+                </li>
+                <li>
+                    <img src="" alt="html">
+                    <p>HTML</p>
+                </li>
+                <li>
+                    <img src="" alt="css">
+                    <p>css</p>
+                </li>
+                <li>
+                    <img src="" alt="javaScrip">
+                    <p>JavaScrip</p>
+                </li>
+            </ul>
+        </div>
     </main>
     <footer>
         <p>Todos los derechos resevados 2030 ya con todo</p>
