--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Pagina: Proyectos</title>
+        <title>Erika Aviles: Portafolio-Proyectos</title>
         <meta name="description" content="Mi pagina de Proyectos">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="author" content="Erika">
+        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./projecto.css">
     </head>
     <body>
-        <p>Proyectos</p>
+        <header class="header">
+            <img class="header--img" src="./img/logotipo.png" alt="logo de Erika-una flor">
+            <a href="">HOME</a>
+            <nav class="header--nav">
+                <ul class="header--nav-list">
+                    <li >
+                        <a href="./contact.html">Contactos</a>
+                    </li>
+                    <li>
+                        <a href="./projects.html">Proyectos</a>
+                    </li>
+                    <li>
+                        <a href="./about.html">Sobre mi</a>
+                    </li>
+                    <li>
+                        <a href="./blog.html">Blog</a>
+                    </li>
+                </ul>
+            </nav>  
+        </header>
+        <main class="main-project">
+            <ul class="project-list">
+                <li>
+                    <img class="project-img" src="https:/picsum.photos/300" alt="Projects">
+                    <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vel iusto beatae excepturi voluptatem, nihil hic quisquam sapiente voluptas repellendus ipsa quas impedit enim cumque ratione dolor quidem, sequi laboriosam.</p>
+                    <div class="project-one">
+                        <span class="project-technology">HTML</span>
+                        <span class="project-technology">CSS</span>
+                        <div>
+                        <a href=""><b>Ver aqui</b> </a> 
+                        <a href=""><b>Repositorio</b> </a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
